<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">
        <Button
            android:id="@+id/toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast_example"
            android:onClick="toastExample" />
        <Button
            android:id="@+id/snackbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snackbar_example"
            android:onClick="snackbarExample" />
        <Button
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_example"
            android:onClick="notificationExample" />
        <Button
            android:id="@+id/cancelNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_notification"
            android:onClick="cancelNotification" />
        <Button
            android:id="@+id/updateNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_notification"
            android:onClick="updateNotification" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>